<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  android:id="@+id/root"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="com.volkanatalan.memory.activities.AddMemoryActivity">
...
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">


      <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:title="@string/add_memory_camel"
        android:theme="@style/ToolbarTheme"
...
                android:textSize="@dimen/label_text_size"
                android:textStyle="bold"/>

            </LinearLayout>

            <EditText
              android:id="@+id/titleEditText"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginEnd="10dp"
              android:singleLine="true"
              android:hint="Title"
              android:textColor="@color/black"
              android:inputType="textCapWords"/>

            <EditText
              android:id="@+id/textEditText"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:minHeight="150dp"
              android:singleLine="false"
              android:inputType="textMultiLine|textCapSentences"
              android:gravity="top"
...
            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_vertical">

              <EditText
                android:id="@+id/tagEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:singleLine="true"
                android:hint="Tag"
                android:textColor="@color/black"
                android:inputType="text"/>

              <ImageView
                android:id="@+id/addTagImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:srcCompat="@drawable/add_button_primary_dark_color"
                tools:ignore="VectorDrawableCompat"/>

            </LinearLayout>

            <LinearLayout
              android:id="@+id/tagContainer"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"/>

          </LinearLayout>

...
                android:textSize="@dimen/label_text_size"
                android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
              android:id="@+id/addImageButton"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="@dimen/add_button_padding"
              android:paddingStart="@dimen/add_button_start_end"
              android:paddingEnd="@dimen/add_button_start_end"
              android:orientation="horizontal"
...
                android:textSize="16sp"
                android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
              android:id="@+id/imageContainer"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"/>

          </LinearLayout>

...
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/label_text_size"
                android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
              android:id="@+id/addDocumentButton"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:padding="@dimen/add_button_padding"
              android:paddingStart="@dimen/add_button_start_end"
              android:paddingEnd="@dimen/add_button_start_end"
              android:gravity="center_vertical"
...
                android:textColor="@color/white"/>

            </LinearLayout>


            <LinearLayout
              android:id="@+id/documentContainer"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"/>

          </LinearLayout>

...





          <LinearLayout
            android:id="@+id/linkBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="200dp"
            android:orientation="vertical"
            android:background="@drawable/bg_section">
...
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                  android:id="@+id/linkTitleEditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="10dp"
                  android:layout_marginBottom="5dp"
                  android:singleLine="true"
                  android:hint="@string/link_title"
                  android:textColor="@color/black"
                  android:selectAllOnFocus="true" android:inputType="textCapSentences"/>
  
                <EditText
                  android:id="@+id/linkAddressEditText"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="10dp"
                  android:layout_marginBottom="5dp"
                  android:singleLine="true"
                  android:hint="@string/address"
                  android:textColor="@color/black"
                  android:selectAllOnFocus="false"/>

              </LinearLayout>

              <ImageView
                android:id="@+id/addLinkImageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginBottom="15dp"
                app:srcCompat="@drawable/add_button_primary_dark_color"/>
            </LinearLayout>

            <LinearLayout
              android:id="@+id/linkContainer"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"/>

          </LinearLayout>
        </LinearLayout>
...
