<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context="com.volkanatalan.memory.activities.MainActivity"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
  
  <androidx.appcompat.widget.LinearLayoutCompat
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:background="@drawable/bg1">

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    android:elevation="4dp"
    android:theme="@style/ToolbarTheme"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    
    <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingBottom="@dimen/page_padding">
  
      <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    
        <LinearLayout
          android:id="@+id/search_results_container"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="@dimen/search_edit_text_height"
          android:paddingBottom="@dimen/ad_banner_height"
          android:paddingStart="@dimen/page_padding"
          android:paddingEnd="@dimen/page_padding"
          android:orientation="vertical"/>
        
      </ScrollView>
  
  
      <FrameLayout
        android:id="@+id/search_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/page_padding"
        android:paddingEnd="@dimen/page_padding">
        
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingStart="5dp"
          android:paddingEnd="5dp"
          android:orientation="horizontal"
          android:background="@drawable/bg_search_edit_text"
          android:gravity="center_vertical">
          
          <ImageView
            android:id="@+id/search_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/search_button_padding"
            android:background="@drawable/bg_clean_search_button"
            app:srcCompat="@drawable/search"/>
  
          <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/search_edit_text_height"
            android:hint="@string/search"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:singleLine="true" />
  
          <ImageView
            android:id="@+id/clear_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/search_button_padding"
            android:background="@drawable/bg_clean_search_button"
            app:srcCompat="@drawable/close"/>

        </LinearLayout>
      </FrameLayout>
    </FrameLayout>
  </androidx.appcompat.widget.LinearLayoutCompat>
  
  
  <FrameLayout
    android:id="@+id/interlayer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_black"
    android:clickable="true"
    android:focusable="true"
    android:visibility="gone"/>
  
  <RelativeLayout
    android:id="@+id/ad_banner_container"
    android:layout_width="match_parent"
    android:layout_height="@dimen/ad_banner_height"
    android:layout_gravity="bottom|center_horizontal"
    android:gravity="center"/>
  
  <FrameLayout
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>

</FrameLayout>