...





  <LinearLayout
    android:id="@+id/documentBase"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:layout_marginBottom="10dp"
    android:visibility="gone"
    android:orientation="vertical"
...



  

  <LinearLayout
    android:id="@+id/buttonContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
      android:id="@+id/deleteButtonImageView"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:layout_marginEnd="5dp"
      android:background="@color/delete_red"
      app:srcCompat="@drawable/delete_memory"/>

    <ImageView
      android:id="@+id/editButtonImageView"
      android:layout_width="30dp"
      android:layout_height="30dp"
      android:background="@color/edit_yellow"
      app:srcCompat="@drawable/edit_memory"/>

  </LinearLayout>
...
